ci(actions): trigger packaging workflows on pyproject updates
Add docx-toolbox/pyproject.toml to push path filters across all package-docx workflows so packaging CI runs when build metadata changes.

--- a/.github/workflows/package-docx-flet.yml
+++ b/.github/workflows/package-docx-flet.yml
@@ -6,6 +6,7 @@ on:
     branches: [main, dev]
     paths:
       - "docx-toolbox/core/**"
+      - "docx-toolbox/pyproject.toml"
       - "docx-toolbox/flet/**"
       - ".github/workflows/package-docx-flet.yml"
     tags:
