ci(actions): force bash shell for docx package jobs
Set package job default shell to bash for flet/pyqt6/pyside6/pywebview/tk workflows.\n\nThis fixes Windows runner failures where PowerShell interpreted Bash-style line continuations in the package command.

--- a/.github/workflows/package-docx-flet.yml
+++ b/.github/workflows/package-docx-flet.yml
@@ -22,6 +22,7 @@ jobs:
     defaults:
       run:
         working-directory: docx-toolbox
+        shell: bash
     steps:
       - uses: actions/checkout@v4
 
