--- a/.github/workflows/package-docx-pyside6.yml
+++ b/.github/workflows/package-docx-pyside6.yml
@@ -22,6 +22,7 @@ jobs:
     defaults:
       run:
         working-directory: docx-toolbox
+        shell: bash
     steps:
       - uses: actions/checkout@v4
 
