refactor(docx-toolbox): remove pyqt6 and tk desktop variants
- remove pyqt6/tk app sources and dedicated packaging workflows

- keep package_app targets to pyside6, flet, and pywebview

- update pyproject optional deps and docs to match remaining variants

--- a/.github/workflows/package-docx-all.yml
+++ b/.github/workflows/package-docx-all.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[pyside6,pyqt6,flet,pywebview,dev]"
+          pip install -e ".[pyside6,flet,pywebview,dev]"
 
       - uses: actions/setup-node@v4
         with:
@@ -77,7 +77,7 @@ jobs:
       - name: Package all desktop apps
         run: |
           set -euo pipefail
-          for app in tk flet pyqt6 pyside6 pywebview; do
+          for app in flet pyside6 pywebview; do
             python scripts/package_app.py \
               --app "$app" \
               --version "${{ steps.version.outputs.value }}" \
