refactor(docx-toolbox): converge GUI stack to pyside6 only
- remove flet and pywebview code paths and packaging workflows

- simplify dependencies, docs, and CI triggers for pyside6-only maintenance

- update package_app zip behavior on macOS to preserve .app bundle structure

--- a/.github/workflows/package-docx-pyside6.yml
+++ b/.github/workflows/package-docx-pyside6.yml
@@ -6,8 +6,11 @@ on:
     branches: [main, dev]
     paths:
       - "docx-toolbox/core/**"
+      - "docx-toolbox/references/**"
       - "docx-toolbox/pyproject.toml"
+      - "docx-toolbox/requirements.txt"
       - "docx-toolbox/pyside6/**"
+      - "docx-toolbox/scripts/package_app.py"
       - ".github/workflows/package-docx-pyside6.yml"
     tags:
       - "v*"
