--- a/docx-toolbox/requirements.txt
+++ b/docx-toolbox/requirements.txt
@@ -5,10 +5,8 @@ Pillow>=10.0.0
 matplotlib>=3.8.0
 reportlab>=4.0.0
 
-# Optional GUI dependencies (all included for full local environment)
+# GUI dependency
 PySide6>=6.6.0
-flet>=0.81.0
-pywebview>=5.0.0
 
 # Development and packaging dependencies
 pytest>=8.0.0
